# Captain-Claw-Remake

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
Captain-Claw/: Settings.cpp  Settings.h
Captain-Claw/src/: Game_UI.cpp  Game_UI.h  Player Movement.cpp  Player Movement.h  Settings.cpp  Settings.h  animation.cpp  animation.h  asset_constants.h  c_checkpoint.cpp  c_checkpoint.h  c_collider.cpp  c_collider.h  c_enemy.cpp  c_enemy.h  c_physics.cpp  c_physics.h  c_player.cpp  c_player.h  c_render.cpp  c_render.h  claw.cpp  claw.h  combat_system.cpp  combat_system.h  ecs.cpp  ecs.h  entity.cpp  entity.h  entity_components.h  entity_inits.cpp  entity_inits.h  keymap_menu.cpp  keymap_menu.h  main.cpp  menu.cpp  menu.h  pickup_system.cpp  pickup_system.h  platforms.cpp  (+21 more)
